--- a/frontend/package.json
+++ b/frontend/package.json
@@ -80,6 +80,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.15.0",
+    "@next/eslint-plugin-next": "^11.1.0",
     "@tailwindcss/typography": "^0.4.1",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
